--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Happy Monthsary!</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <div class="header">
-        <p>Header</p>
+        <p>Happy Monthsary!</p>
         <p>Lock</p>
     </div>
     <div class="container">
