--- a/index.html
+++ b/index.html
@@ -5,18 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy Monthsary!</title>
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet" />
 </head>
-<body>
+<body><div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
     <div class="header">
-        <p>Happy Monthsary!</p>
-        <p>Lock</p>
+        <p></p>
+        <p></p>
     </div>
     <div class="container">
+        <div class ="row" id="letter">
+            <p>
+                <span class="greeting">To my future wife,</span><br>
+                <span class="body">
+                    Happy 9th Monthsary! I know things haven't been easy lately, and I'm really sorry for all the stress I've been putting on you. I know you're still mad at me as of this moment writing this letter. Yesterday, I planned to do my tasks early in the morning so I can surprise you and eat outside, however things got out of control when my supposed departure got delayed and delayed so I did not push through. I hid this from you yesterday even though you're already talking about efforts and stuff because I do not want this supposed next part of my surprise to get blown. I hope you understand. I love you more than anything else in this world. I hope you like it! Let's reminisce our times together.<br>
+                    -Lock
+                </span>
+            </p>
+        </div>
+        <div class="scroll-down">
+            <div class="arrow"></div>
+            <p>Scroll down for more!</p>
+        </div>
         <div class="row" id="row-1">
             <div class="col">
                 <div class="img-container right">
                     <img src="1.jpeg" alt="" />
-                    <p>Image alt 1</p>
+                    <p>July 3, 2024</p>
+                    <p>
+                        <b>Our First Date!</b> <br>
+                        We went to Tagaytay, our first date & roadtrip together!
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -26,7 +46,11 @@
             <div class="col">
                 <div class="img-container left">
                     <img src="2.jpg" alt="" />
-                    <p>Image alt 2</p>
+                    <p>July 9, 2024</p>
+                    <p>
+                        <b>Videoke Date!</b> <br>
+                        We just decided to go to the mall, chat about random stuff, then went to the arcade!
+                    </p>
                 </div>
             </div>
         </div>
@@ -34,7 +58,11 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="3.jpeg" alt="" />
-                    <p>Image alt 3</p>
+                    <p>July 26, 2024</p>
+                    <p>
+                        <b>We're Official!</b> <br>
+                        The happiest day of my life, the day you decided to officially be mine!
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -44,7 +72,11 @@
             <div class="col">
                 <div class="img-container left">
                     <img src="4.jpeg" alt="" />
-                    <p>Image alt 4</p>
+                    <p>August 10, 2024</p>
+                    <p>
+                        <b>Hotel Date!</b> <br>
+                        We had the whole day together enjoying at the hotel!
+                    </p>
                 </div>
             </div>
         </div>
@@ -52,7 +84,12 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="5.jpeg" alt="" />
-                    <p>Image alt 5</p>
+                    <p>August 17, 2024</p>
+                    <p>
+                        <b>First Overnight!</b> <br>
+                        The unexpected happened, we had to spend the night together! <br>
+                        A blessing in disguise!
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -61,8 +98,13 @@
             <div class="col"></div>
             <div class="col">
                 <div class="img-container left">
-                    <img src="6.jpg" alt="" />
-                    <p>Image alt 6</p>
+                    <img src="6.jpeg" alt="" />
+                    <p>August 27, 2024</p>
+                    <p>
+                        <b>First Monthsary!</b> <br>
+                        I surprised you with a white rose! <br>
+                        It was both a monthsary gift and my apology gift for you!
+                    </p>
                 </div>
             </div>
         </div>
@@ -70,7 +112,11 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="7.jpeg" alt="" />
-                    <p>Image alt 7</p>
+                    <p>September 10, 2024</p>
+                    <p>
+                        <b>After-Class Date!</b> <br>
+                        I went straight to you after class!
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -80,7 +126,11 @@
             <div class="col">
                 <div class="img-container left">
                     <img src="8.jpeg" alt="" />
-                    <p>Image alt 8</p>
+                    <p>September 11, 2025</p>
+                    <p>
+                        <b>Day Two</b> <br>
+                        I went to see you again!
+                    </p>
                 </div>
             </div>
         </div>
@@ -88,7 +138,12 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="9.jpeg" alt="" />
-                    <p>Image alt 9</p>
+                    <p>September 28, 2024</p>
+                    <p>
+                        <b>Intramuros Date!</b> <br>
+                        We went sightseeing in <br>
+                        Fort Santiago until nighttime.
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -97,8 +152,13 @@
             <div class="col"></div>
             <div class="col">
                 <div class="img-container left">
-                    <img src="10.jpeg" alt="" />
-                    <p>Image alt 10</p>
+                    <img src="10.jpg" alt="" />
+                    <p>October 15, 2024</p>
+                    <p>
+                        <b>Baby Time!</b> <br>
+                        I went to comfort you after Tine's funeral. <br>
+                        You're father also picked you up for lunch out of the blue!
+                    </p>
                 </div>
             </div>
         </div>
@@ -106,7 +166,13 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="11.jpeg" alt="" />
-                    <p>Image alt 11</p>
+                    <p>October 18, 2024</p>
+                    <p>
+                        <b>MOA Date!</b> <br>
+                        We went shopping at MOA! <br>
+                        We spent the afternoon <br>
+                        sightseeing by the bay.
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -116,7 +182,12 @@
             <div class="col">
                 <div class="img-container left">
                     <img src="12.jpg" alt="" />
-                    <p>Image alt 12</p>
+                    <p>November 30, 2024</p>
+                    <p>
+                        <b>Supposed Badminton Date!</b> <br>
+                        We were supposed to play badminton, but the venue <br>
+                        was reserved, so we played billiards instead.
+                    </p>
                 </div>
             </div>
         </div>
@@ -124,7 +195,11 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="13.jpeg" alt="" />
-                    <p>Image alt 13</p>
+                    <p>November 30, 2024</p>
+                    <p>
+                        <b>Dinner Time!</b> <br>
+                        You brought me to Four-M!
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -134,7 +209,12 @@
             <div class="col">
                 <div class="img-container left">
                     <img src="14.jpeg" alt="" />
-                    <p>Image alt 14</p>
+                    <p>December 22, 2024</p>
+                    <p>
+                        <b>Christmas Party!</b> <br>
+                        I brought you to our family christmas party! <br>
+                        We spent two days together with my family!
+                    </p>
                 </div>
             </div>
         </div>
@@ -142,7 +222,11 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="15.jpeg" alt="" />
-                    <p>Image alt 15</p>
+                    <p>December 22, 2024</p>
+                    <p>
+                        <b>Back to Where it All Started!</b> <br>
+                        After the party, we went to Tagaytay, where we spent our first date!
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -152,7 +236,11 @@
             <div class="col">
                 <div class="img-container left">
                     <img src="16.jpg" alt="" />
-                    <p>Image alt 16</p>
+                    <p>January 26, 2025</p>
+                    <p>
+                        <b>Rizal Park Date!</b> <br>
+                        We had a picnic in Rizal Park!
+                    </p>
                 </div>
             </div>
         </div>
@@ -160,7 +248,12 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="17.jpeg" alt="" />
-                    <p>Image alt 17</p>
+                    <p>February 4, 2025</p>
+                    <p>
+                        <b>Southmall Date!</b> <br>
+                        I went straight to you after <br>
+                        submitting my documents in DOST!
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -170,7 +263,12 @@
             <div class="col">
                 <div class="img-container left">
                     <img src="18.jpeg" alt="" />
-                    <p>Image alt 18</p>
+                    <p>February 14, 2025</p>
+                    <p>
+                        <b>Valentine's Day Surprise!</b> <br>
+                        I came to surprise you after your date with your friends! <br>
+                        You even got lost, so I came to the rescue with a bouquet for you.
+                    </p>
                 </div>
             </div>
         </div>
@@ -178,7 +276,12 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="19.jpg" alt="" />
-                    <p>Image alt 19</p>
+                    <p>March 8, 2025</p>
+                    <p>
+                        <b>Home Visit!</b> <br>
+                        You came to visit me at home! We ate <br>
+                        kwek-kwek before you went home.
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -188,7 +291,12 @@
             <div class="col">
                 <div class="img-container left">
                     <img src="20.jpeg" alt="" />
-                    <p>Image alt 20</p>
+                    <p>March 22, 2025</p>
+                    <p>
+                        <b>Haircut Day!</b> <br>
+                        I went to school to fix my school documents, and then <br>
+                        got a haircut! I went straight to you afterwards.
+                    </p>
                 </div>
             </div>
         </div>
@@ -196,7 +304,12 @@
             <div class="col">
                 <div class="img-container right">
                     <img src="21.jpg" alt="" />
-                    <p>Image alt 21</p>
+                    <p>April 3, 2025</p>
+                    <p>
+                        <b>After School Date!</b> <br>
+                        I went straight to see you again <br>
+                        after going to school for clearance!
+                    </p>
                 </div>
             </div>
             <div class="col"></div>
@@ -206,7 +319,12 @@
             <div class="col">
                 <div class="img-container left">
                     <img src="22.jpeg" alt="" />
-                    <p>Image alt 22</p>
+                    <p>April 3, 2025</p>
+                    <p>
+                        <b>Just Chilling!</b> <br>
+                        After strolling in the mall, we went outside <br>
+                        the mall to chill, then ate dinner at Four-M!
+                    </p>
                 </div>
             </div>
         </div>
