--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>
                 <span class="greeting">To my future wife,</span><br>
                 <span class="body">
-                    Happy 9th Monthsary! I know things haven't been easy lately, and I'm really sorry for all the stress I've been putting on you. I know you're still mad at me as of this moment writing this letter. Yesterday, I planned to do my tasks early in the morning so I can surprise you and eat outside, however things got out of control when my supposed departure got delayed and delayed so I did not push through. I hid this from you yesterday even though you're already talking about efforts and stuff because I do not want this supposed next part of my surprise to get blown. I hope you understand. I love you more than anything else in this world. I hope you like it! Let's reminisce our times together.<br>
+                    Happy 9th Monthsary! I know things haven't been easy lately, and I'm really sorry for all the stress I've been putting you through. I know you're still mad at me as I write this letter. Yesterday, I planned to finish my tasks early in the morning so I could surprise you and take you out to eat. However, things got out of control when my supposed departure kept getting delayed, so I wasn't able to follow through. I didn't tell you about this yesterday—even when you were already talking about effort and everything—because I didn't want to spoil the other surprise I had planned, which is this webpage. I hope you understand. I love you more than anything else in this world. I hope you like this! Let's take some time to reminisce about our moments together.<br>
                     -Lock
                 </span>
             </p>
